Complete Part I : 1. Create the basic structure. 2. Create the controller. 3. Write unit tests for all the services. 4. Use H2 to create in memory db for tests 5. Create a Data Loader for generating sample initial data

--- a/wwproject/pom.xml
+++ b/wwproject/pom.xml
@@ -55,6 +55,18 @@
             <version>1.16.16</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.196</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.8.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
