Complete Part III : 1. Fix bug in Child Info call. 2. Create Scheduled Job for generating ParentSummary. 3. Store ParentSummary in DB 4. Complete Unit Tests.

--- a/wwproject/src/main/resources/application.yml
+++ b/wwproject/src/main/resources/application.yml
@@ -2,8 +2,11 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/wawi?useSSL=false
     username: root
-    password: root
+    password: sanath
     driver-class-name: com.mysql.jdbc.Driver
   jpa:
     properties.hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
     hibernate.ddl-auto: update
+
+schedule:
+  interval: 900000
